--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
-      
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Montserrat:wght@200&family=Roboto+Mono:wght@700&display=swap');
+
 body {
         color: #404040;
-        font:
-          400 15px/22px 'Cambria',
-          'Helvetica Neue',
-          sans-serif;
+        font: 800 15px/22px 'Montserrat', sans-serif;
         margin: 0;
         padding: 0;
         -webkit-font-smoothing: antialiased;
@@ -75,6 +73,7 @@ body {
         border-bottom: 1px solid #eee;
         padding: 10px;
         text-decoration: none;
+        
       }
 
       .listings .item:last-child {
@@ -83,12 +82,12 @@ body {
 
       .listings .item .title {
         display: block;
-        color: #d3a013;
-        font-weight: 700;
+        color: #b6890b;
+        font: 1000 15px/22px 'Montserrat', sans-serif;
       }
 
       .listings .item .title small {
-        font-weight: 400;
+        font-weight: 800;
       }
 
       .listings .item.active .title,
@@ -123,8 +122,7 @@ body {
         width: 100px;
         
         background-image: url('plane.png');
-        
-        
+      
       }
 
       /* Marker tweaks */
@@ -141,7 +139,7 @@ body {
         font:
           400 15px/22px 'Montserrat', sans-serif;
         padding: 0;
-        width: 180px;
+        width: 215px;
       }
 
       .mapboxgl-popup-content h3 {
@@ -150,7 +148,6 @@ body {
         margin: 0;
         padding: 10px;
         border-radius: 3px 3px 0 0;
-        font-weight: 700;
         margin-top: -15px;
       }
 
