--- a/style.css
+++ b/style.css
@@ -52,21 +52,21 @@ body {
       }
 
       .heading {
-        
-        background: #fff;
-        
-        border-bottom: 1px solid #eee;
+        text-shadow: inherit;
+        text-align:center;
+        background: #efede6;
+        border: 1px solid #000000;
         min-height: 60px;
         line-height: 60px;
         padding: 0 10px;
-        background-color: #0874a5;
-        color: #fff;
+        background-color: #2d98c9;
+        color: #a0eea2;
       }
 
       .listings {
         height: 100%;
         overflow: auto;
-        padding-bottom: 60px;
+        padding-bottom: 85px;
       }
 
       .listings .item {
@@ -74,7 +74,6 @@ body {
         border-bottom: 1px solid #eee;
         padding: 10px;
         text-decoration: none;
-        
       }
 
       .listings .item:last-child {
@@ -121,7 +120,6 @@ body {
         cursor: pointer;
         height: 100px;
         width: 100px;
-        
         background-image: url('plane.png');
       
       }
