--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Montserrat:wght@200&family=Roboto+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 
 body {
         color: #404040;
@@ -34,8 +35,9 @@ body {
       }
 
       h1 {
-        font: 400 15px/22px 'Montserrat', sans-serif;
-        font-size: 25px;
+        font: 600 18px/26px 'Major Mono Display', monospace;
+        font-family: 'Major Mono Display', monospace;
+        font-size: 28px;
         margin: 0;
         font-weight: 800;
         line-height: 20px;
