--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Montserrat:wght@200&family=Roboto+Mono:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 
 body {
         color: #404040;
@@ -35,8 +36,8 @@ body {
       }
 
       h1 {
-        font: 600 18px/26px 'Major Mono Display', monospace;
-        font-family: 'Major Mono Display', monospace;
+        font: 600 18px/26px 'Silkscreen', sans-serif;
+        font-family: 'Silkscreen', sans-serif;
         font-size: 28px;
         margin: 0;
         font-weight: 800;
@@ -175,5 +176,14 @@ body {
 
       .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
         border-bottom-color: #91c949;
+      }
+
+      .container {
+        position: fixed;
+      }
+    
+      .text {
+        position: top;
+        z-index: 5;
       }
     
